Add Docker dev env + docu